force-app/main/default/objects/E_Form_Log__c/fields/Log_Book_Activitiy__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Activitiy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Book Activitiy</label>
    <referenceTo>Log_Book_Activitiy__c</referenceTo>
    <relationshipLabel>E-Form Logs</relationshipLabel>
    <relationshipName>E_Form_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>