force-app/main/default/objects/E_Form_Log__c/fields/To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Email_Address__c</fullName>
    <label>To Email Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>