force-app/main/default/objects/E_Form_Log__c/fields/Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point__c</fullName>
    <label>Touch Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>